--- a/new/style.css
+++ b/new/style.css
@@ -13,6 +13,8 @@ html {
 }
 
 body {
+    /* i hope this doesn't cause trouble */
+    padding-top: 0.1px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     min-height: 100svh;
 }
@@ -25,6 +27,19 @@ video {
     max-width: 100%;
 }
 
-#progress-separator {
-    border: 0px solid;
+.toggleable-text:empty::before {
+    content: "\00a0";
+    display: inline-block;
+    min-width: 1ch;
+}
+
+.toggleable-text:hover {
+    cursor: pointer;
+    background-color: rgba(155, 248, 255, 0.2);
+}
+
+.page-title {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-block: 1rem;
 }
