--- a/new/form.css
+++ b/new/form.css
@@ -3,13 +3,17 @@ form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    background-color: #343434;
+    border: 1px solid;
+    border-color: #949494;
 }
 
 .separator {
     display: flex;
     align-items: center;
     text-align: center;
-    color: #6c757d;
+    color: #b8b8b8;
 }
 
 .separator::before,
@@ -25,4 +29,17 @@ form {
 
 .separator::after {
     margin-left: 1ch;
+}
+
+.page-title {
+    background-color: #2e2e2e;
+    border: 1px solid;
+    border-color: #949494;
+}
+
+.download-links-textarea {
+    /* border: 1px solid;
+    border-radius: 10px;
+    border-color: #949494; */
+    background-color: #1a1a1a;
 }
