--- a/new/style.css
+++ b/new/style.css
@@ -17,6 +17,10 @@ body {
     padding-top: 0.1px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     min-height: 100svh;
+    display: flex;
+
+    /* temporary */
+    flex-direction: column;
 }
 
 img,
@@ -42,4 +46,8 @@ video {
     font-size: 2rem;
     font-weight: bold;
     margin-block: 1rem;
+}
+
+button {
+    cursor: pointer;
 }
