--- a/new/style.css
+++ b/new/style.css
@@ -17,10 +17,6 @@ body {
     padding-top: 0.1px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     min-height: 100svh;
-    display: flex;
-
-    /* temporary */
-    flex-direction: column;
 }
 
 img,
@@ -50,4 +46,13 @@ video {
 
 button {
     cursor: pointer;
+}
+
+.progress-total {
+    justify-content: center;
+}
+
+.progress-container {
+    display: flex;
+    flex-direction: column;
 }
